---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      case True {\n        _ -> 3\n      }\n    }\n  }\n  x\n}\n"
---
function go() {
  let x = (() => {
    1;
    return (() => {
      2;
      let $ = true;
      {
        return 3;
      }
    })();
  })();
  return x;
}
